# explora

./: .project-settings.yml  .travis.yml  :w  Actions.hs  DIYGraph.hs  Dict.hs  Dictionary.hs  Explore.hs  Graph.hs  Inventory.hs  Main  Main.hs  Parse.hs  Places.hs  README.md  World.hs  cabal-w-hpc  dictionary.exp  explora.cabal  exploration-game.cabal  explore.cabal  hpcmarkup.sh  places.exp  runtests.sh  shortergame.exp  test.hs  tinygame.exp
Test/: ActionsSpec.hs  DIYGraphSpec.hs  DictionarySpec.hs  GraphSpec.hs  MainSpec.hs  ParseSpec.hs  Samples.hs  Spec.hs
executable/: Main.hs
games/: demo-w-items.exp  demo.exp  example.exp  idealgame.exp  tinygame.exp
test-suite/: ActionsSpec.hs  DIYGraphSpec.hs  DictionarySpec.hs  GameSpec.hs  GraphSpec.hs  HPC.hs  InitSpec.hs  InputSpec.hs  ItemsSpec.hs  LoopSpec.hs  MainSpec.hs  ParseSpec.hs  PlayerSpec.hs  ResponseSpec.hs  SampleItems.hs  Samples.hs  Spec.hs  old
test-suite/executableSpec/: ActionsSpec.hs  MainSpec.hs
test-suite/librarySpec/: DIYGraphSpec.hs  DictionarySpec.hs  InputSpec.hs  ParseSpec.hs
tests/: HSpecTests.hs
