author:
    Libby
build-type:
    Simple
cabal-version:
    >= 1.10
category:
    -- TODO
    Other
copyright:
    2015 Libby libby@daydrea.me
description:
    TODO: Write a package description.
extra-source-files:
    CHANGELOG.md
    CONTRIBUTING.md
    README.md
license-file:
    LICENSE
license:
    MIT
maintainer:
    libby@daydrea.me
name:
    explora
synopsis:
    TODO: Write a package synopsis.
tested-with:
    GHC == 7.8
  , GHC == 7.6
version:
    0.0.0

library
    build-depends:
        base ==4.*
      , containers, parsec, directory
    default-language:
        Haskell2010
    exposed-modules:
        Actions, Dictionary, DIYGraph, Game, Graph, Init, Input, Items, Loop, Parse, Places, Player, Properties, Response
    ghc-options:
        -Wall
    ghc-prof-options:
        -auto-all
        -prof
    hs-source-dirs:
        library

executable explora
    build-depends:
        base, containers, parsec, hspec, QuickCheck, explora, directory
    default-language:
        Haskell2010
    ghc-prof-options:
        -auto-all
        -prof
    hs-source-dirs:
        executable
    main-is:
        Main.hs

test-suite tests
    build-depends:
        base
      , containers, directory
      , explora
      , parsec
      , hspec ==2.*
        , HUnit
        , QuickCheck
    default-language:
        Haskell2010
    ghc-options:
--        -fhpc
        -Wall
--        -Werror
    hs-source-dirs:
        library
        test-suite
    main-is:
        Spec.hs
    type:
        exitcode-stdio-1.0
